public class Main {
    public static void main(String[] args) {
        System.out.println("Hello World!");
        HttpClient tmp = new HttpClient();
        tmp.testFunction();
    }
}
