@startuml
'https://plantuml.com/class-diagram

class Main {

    +{static}main(args:String[*])
}

class Controller {
}

class Display {
}

class HttpClient {
    -result : String
    +request(url : String) : String
}

class Request {
    -parameters : Map<String, String>
    -final urlHeader : String
    +setDeparture(departure : String)
    +setDestination(destination : String)
    +setDateTime(date : Date)
    +clear()
    +getURL() : String
}

class Train {
    -number : int
    -type : String
    -departure : String
    -destination : String
    -time : Date
    +getNumber() : int
    +getType() : String
    +getDeparture() : String
    +getDestination() : String
    +getDate() : String
    +getTime() : String
    +getDateTime() : String
    +toString() : String
}

HttpClient "needs"..> Request
Controller "call"--> HttpClient
Controller "stock"--> Train
Controller "call" --> Display

@enduml